# cmake-test

./: CMakeLists.txt  catch_test_minimal.cpp  gtest_minimal.cpp  main.cpp  test_minimal.cpp  utest_minimal.cpp
.github/workflows/: ci.yml
